Fixed 4  bugs - shifting branch

--- a/frontend/src/dashboard/Jobs/PostedJobs/PostedJobs.css
+++ b/frontend/src/dashboard/Jobs/PostedJobs/PostedJobs.css
@@ -1,25 +1,38 @@
+.mainDiv{
+    justify-content: center;
+    display: flex table-column;
+    align-items: center;
+}
+
 .grid-container-element { 
     display: flex; 
     grid-template-columns: 1fr 1fr; 
     grid-gap: 20px; 
     border: 1px; 
-    width: 90%;
     margin-left: 0.5; 
     height: 100%;
     justify-content: center;
     display: flex;
-    justify-content: center;
+    align-items: center;
 } 
 .grid-child-element { 
-    margin: 10px; 
+    /* margin: 10px;  */
     border: 1px; 
     border: 0.4em solid rgb(0, 0, 0);
+    justify-content: center;
+    align-items: center;
 }
 
 .applsDisplay{
-    display: flex;
+    /* margin: 10px;  */
+    border: 1px; 
+    border: 0.4em solid rgb(0, 0, 0);
+    justify-content: center;
+    align-items: center;
+
+    /* display: flex;
     justify-content: center;
     border: 0.4em solid rgb(0, 0, 0);
     width: 50vw;
-    margin: 0.1em;
+    margin: 0.1em; */
 }
